# word-of-wisdom-solution

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  quotes.rs
server/src/pow/: hash_storage.rs  mod.rs  resource.rs
server/src/pow/error/: hash_storage_error.rs  mod.rs  parse_error.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/config/: mod.rs
