[package]
name = "word-of-wisdom-server"
version = "0.0.1"
edition = "2021"

[dependencies]
once_cell = "1.17"
rand = "0.8.5"
rust-hashcash = "0.3.3"
word-of-wisdom-shared = { path = "../shared" }
serde_json = "1"
uuid = {version = "1.3", features = ["v4"]}
thiserror = "1"

[lib]
name = "lib"
path = "src/lib.rs"
